--- a/Split_It/Split_It/GroupDetailPage.xaml
+++ b/Split_It/Split_It/GroupDetailPage.xaml
@@ -1,18 +1,18 @@
 ﻿<Page
-    x:Class="Split_It.FriendDetailPage"
+    x:Class="Split_It.GroupDetailPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Split_It"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:pr="using:PullToRefresh.UWP"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pr="using:PullToRefresh.UWP"
     xmlns:con_bal="using:Split_It.Converter.Balance"
     xmlns:winux="using:WinUX.Xaml.Converters"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <Binding Path="FriendDetailVM" Source="{StaticResource Locator}"/>
+        <Binding Path="GroupDetailVM" Source="{StaticResource Locator}"/>
     </Page.DataContext>
 
     <Page.Resources>
@@ -34,29 +34,24 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <RelativePanel Background="{StaticResource splitwiseGreen}" DataContext="{Binding CurrentFriend}">
+        <RelativePanel Background="{StaticResource splitwiseGreen}">
             <Button FontFamily="Segoe MDL2 Assets" 
                     x:Name="BackButton"
 					Foreground="White"
 					Content="&#xE72B;"
 					Width="50" Height="50" 
 					Background="Transparent" Style="{StaticResource NoBorderSelectButton}" 
-                    Command="{Binding FriendDetailVM.GoBackCommand, Mode=OneWay}" DataContext="{Binding Source={StaticResource Locator}}"/>
-            <Ellipse Style="{StaticResource RoundImage}" x:Name="image" RelativePanel.RightOf="BackButton" RelativePanel.AlignVerticalCenterWith="BackButton">
+                    Command="{Binding GoBackCommand}"/>
+            <Ellipse x:Name="image" Height="30" Width="30"
+                     RelativePanel.RightOf="BackButton" RelativePanel.AlignVerticalCenterWith="BackButton">
                 <Ellipse.Fill>
-                    <ImageBrush ImageSource="{Binding Picture.Medium}"/>
+                    <ImageBrush ImageSource="Assets/Images/groupIcon.png"/>
                 </Ellipse.Fill>
             </Ellipse>
-            <Grid RelativePanel.RightOf="image" RelativePanel.AlignVerticalCenterWith="image" Margin="15,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <TextBlock Text="{Binding Name}" Foreground="White" />
-                <TextBlock Text="{Binding Email}" Foreground="White" 
-                           Visibility="{Binding Email, Converter={StaticResource EmptyStringToVisibilityConverter}}" Grid.Row="1"/>
-            </Grid>
-            <ListView RelativePanel.Below="image" ItemsSource="{Binding Balance}" 
+
+            <TextBlock Text="{Binding CurrentGroup.Name}" Foreground="White" 
+                       RelativePanel.RightOf="image" RelativePanel.AlignVerticalCenterWith="image" Margin="8,0"/>
+            <ListView RelativePanel.Below="image" ItemsSource="{Binding CurrentUserAsFriend.Balance}" 
                       Margin="0,10" SelectionMode="None"
                       RelativePanel.RightOf="BackButton">
                 <ListView.ItemTemplate>
@@ -98,14 +93,4 @@
 				Grid.Row="1" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         <ProgressRing IsActive="{Binding IsBusy}" Grid.Row="1"/>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar>
-            <AppBarButton Label="settle up">
-                <AppBarButton.Icon>
-                    <FontIcon Glyph="&#x1f4b2;" FontFamily="Segoe UI Symbol"/>
-                </AppBarButton.Icon>
-            </AppBarButton>
-        </CommandBar>
-    </Page.BottomAppBar>
 </Page>
