--- a/Split_It/Split_It/ExpenseDetailPage.xaml
+++ b/Split_It/Split_It/ExpenseDetailPage.xaml
@@ -147,7 +147,7 @@
         <Canvas Background="DarkGray" Opacity="0.5" 
 					Grid.RowSpan="2"
 					Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-        <ProgressRing IsActive="{Binding IsBusy}"/>
+        <ProgressRing IsActive="{Binding IsBusy}" Grid.RowSpan="2"/>
     </Grid>
 
     <Page.BottomAppBar>
