settle up for group

--- a/Split_It/Split_It/GroupDetailPage.xaml
+++ b/Split_It/Split_It/GroupDetailPage.xaml
@@ -106,7 +106,7 @@
                 <AppBarButton.Flyout>
                     <Flyout utils:FlyoutHelpers.IsOpen="{Binding IsFlyoutOpen, Mode=TwoWay}"
                             utils:FlyoutHelpers.Parent="{Binding ElementName=settleAppBar}">
-                        <ListView ItemsSource="{Binding UserDebts}" SelectedItem="{Binding SettleUpBalance, Mode=TwoWay}">
+                        <ListView ItemsSource="{Binding UserDebts}" SelectedItem="{Binding DebtToSettle, Mode=TwoWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock>
