--- a/Split_It/Split_It/GroupDetailPage.xaml
+++ b/Split_It/Split_It/GroupDetailPage.xaml
@@ -101,7 +101,7 @@
 
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton Label="new expense" Icon="Add"/>
+            <AppBarButton Label="new expense" Icon="Add" Command="{Binding AddExpenseCommand}"/>
             <AppBarButton Label="settle up" Icon="Accept" x:Name="settleAppBar" IsEnabled="{Binding CanSettleUp}">
                 <AppBarButton.Flyout>
                     <Flyout utils:FlyoutHelpers.IsOpen="{Binding IsFlyoutOpen, Mode=TwoWay}"
