--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -244,4 +244,10 @@
 
         </SplitView.Content>
     </SplitView>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Minimal">
+            <AppBarButton Label="new expense" Icon="Add" Command="{Binding AddExpenseCommand}"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 </Page>
